GNOME Bugzilla – Bug 153402
In radar plots, "vary color by slice" behaves backward and the wording is wrong.
Last modified: 2004-12-22 21:47:04 UTC
Radar plots, on the radarplot element properties area, have an option "vary color by slice". This option also exists in pie plots where it behaves correctly and makes sense. This option SHOULD NOT EXIST for radar plots. The "slices" are actually different series which means that they colours can be controlled in the series element properties. If this property is kept, please note that the box should start checked, since by default we do vary the colours of the different series. Currently, checking the box makes all the series share the colour of the first series. --adrian
I've just removed radar prefs, they do not make sense.