http://bugzilla.gnome.org/show_bug.cgi?id=153402 removed. removed. removed

2004-09-29  Emmanuel Pacaud <emmanuel.pacaud@univ-poitiers.fr>

	http://bugzilla.gnome.org/show_bug.cgi?id=153402
	* graph/plugins/gog-radar-prefs.c: removed.
	* graph/plugins/gog-radar-prefs.glade: removed.
	* graph/plugins/gog-radar.c: removed reference to plot editor.
	* graph/plugins/Makefile.am: removed reference to
	gog-radar-prefs.[c,glade].